@@ -1,3 +1,10 @@
+Fri Jul 12 08:45:00 HKT 2002 William Brack <wbrack@mmm.com.hk>
+
+	* xpath.c: enhanced handling of booleans (especially '='
+	  and '!=' for nodesets) - fixes bug 85256.  Added new
+	  routine xmlXPathNotEqualValues for more proper handling
+	  of '!=' when nodesets are involved.
+
 Thu Jul 11 21:45:52 CEST 2002 Daniel Veillard <daniel@veillard.com>
 
 	* doc/Makefile.am: fixing Red Hat bug #68614 by adding the
